add new clientes and subscribe in topics